# indi-mcp

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: enforce-merge-policy.yml  python-ci.yml
deploy/: indi-mcp.service
docs/: Deployment.md  Design.md  FitsHeaders.md  MessageSchema.md  ObservatorySchema.md  RigSchema.md  ScriptSchema.md
scripts/: capture_frame.yaml  connect.yaml  connect_camera.yaml  connect_dew_heater.yaml  connect_filter_wheel.yaml  connect_flat_screen.yaml  connect_focuser.yaml  connect_guide_camera.yaml  connect_mount.yaml  connect_observatory_control.yaml  connect_power_hub.yaml  connect_rotator.yaml  cool_camera.yaml  disconnect.yaml  disconnect_camera.yaml  disconnect_dew_heater.yaml  disconnect_filter_wheel.yaml  disconnect_flat_screen.yaml  disconnect_focuser.yaml  disconnect_guide_camera.yaml  disconnect_mount.yaml  disconnect_observatory_control.yaml  disconnect_power_hub.yaml  disconnect_rotator.yaml  focus_absolute.yaml  park.yaml  select_filter.yaml  set_focus_position.yaml  slew.yaml  unpark.yaml
src/indi_mcp/: __init__.py  cli.py  db.py  event_log.py  event_streams.py  fits_headers.py  frame_store.py  indi_driver.py  indi_messaging.py  (+7 more)
tests/: conftest.py  test_builtin_scripts.py  test_cli.py  test_db.py  test_event_log.py  test_event_streams.py  test_fits_headers.py  test_frame_store.py  test_indi_driver.py  test_indi_messaging.py  test_indi_server.py  test_observatory_store.py  test_package.py  test_rig_store.py  test_script_engine.py  test_script_runs.py  test_script_store.py  test_server.py
(+1 files in other folders)
